--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.1.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "openai": "^3.2.1"
   },
   "devDependencies": {
+    "axios": "^1.4.0",
     "nodemon": "^2.0.22"
   }
 }
